fix(checkbox): vertically center-align label text

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -24,6 +24,8 @@
     }
 
     label {
+        line-height: normal;
+
         &.mdc-checkbox--disabled {
             opacity: 0.37;
         }
